feat: add initial PoE tips content and site infrastructure, including RF Sustain and Scarab Vendor recipes.

--- a/src/content/tips/recombinator-spectre-chest.mdx
+++ b/src/content/tips/recombinator-spectre-chest.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Recombinator Crafting: +1 Spectre Chest with 1000 ES"
-description: "Step-by-step guide to crafting high ES Spectre chests using recombinators - a reliable method for 25+ divine profit per craft."
+description: "Step-by-step guide to crafting high ES Spectre chests using recombinators - a reliable method for transferring valuable modifiers."
 game: poe1
 category: crafting
 tags: ["recombinator", "spectre", "energy-shield", "minions", "crafting"]
@@ -9,26 +9,23 @@ publishedAt: 2024-12-10
 mayBeOutdated: true
 difficulty: advanced
 timeSensitivity: anytime
-estimatedValue: "25+ div profit"
 prerequisites:
   - "Access to recombinators (requires league with this mechanic)"
-  - "Starting capital of ~10 divines"
+  - "Starting capital for materials"
   - "Understanding of recombinator mechanics"
 source:
-  name: "Reddit u/ExampleCrafter"
-  url: "https://reddit.com/r/pathofexile"
+  - name: "Reddit u/ExampleCrafter"
+    url: "https://reddit.com/r/pathofexile"
 ---
 
 ## Overview
 
 This craft takes advantage of recombinator rules to reliably transfer the +1 Spectre mod onto a high ES base while keeping T1 ES rolls.
 
-**Expected outcome:** 35 div average sell price, 10 div average cost = **25 div profit**
-
 ## Materials Needed
 
-- +1 Spectre chest on non-ES base (1-2 div)
-- Several ilvl 86 Twilight Regalias (5c each)
+- +1 Spectre chest on non-ES base
+- Several ilvl 86 Twilight Regalias
 - Orbs of Alteration (~500)
 - Recombinators
 - Tailoring Orb
@@ -44,11 +41,9 @@ Find a chest with **+1 to Maximum Number of Raised Spectres** that:
 
 [Trade link example](https://www.pathofexile.com/trade/search/Settlers)
 
-**Budget:** Maximum 1 divine
-
 ### Step 2: Prepare Twilight Regalias
 
-1. Buy several ilvl 86 Twilight Regalias for 5c each
+1. Buy several ilvl 86 Twilight Regalias
 2. Alt spam for T1 flat ES or T1% ES
 3. Use regex `"resp|unfa"` in stash to highlight hits
 
@@ -73,27 +68,10 @@ Combine your T1/T1 ES Twilight with the +1 Spectre chest.
 3. Use Eldritch currency for good suffixes (int, resistances)
 4. Bench craft as needed
 
-## Profit Breakdown
-
-| Component | Cost |
-|-----------|------|
-| +1 Spectre chest | 1 div |
-| Twilight bases (5-10) | 0.5 div |
-| Alterations | 0.5 div |
-| Recombinators | 7 div |
-| Finishing currency | 1 div |
-| **Total Average** | **~10 div** |
-
-| Outcome | Sell Price |
-|---------|-----------|
-| 1000 ES + good suffixes | 35-70 div |
-| 900 ES mediocre suffixes | 15-20 div |
-| Failed (recovery) | 2-5 div |
-
 ## Risk Management
 
-- Failed recombines often leave you with sellable items (T1/T1 ES bases or raw +1 Spectre)
+- Failed recombinations often leave you with usable items (T1/T1 ES bases or raw +1 Spectre)
 - Don't overinvest in a single attempt
-- Check current Spectre chest prices before starting
+
 
 > ⚠️ **Note:** This requires recombinators, which are not available in every league. Check if your current league has access to this crafting method.
