--- a/src/content/tips/rf-sustain-basics.mdx
+++ b/src/content/tips/rf-sustain-basics.mdx
@@ -10,8 +10,8 @@ difficulty: beginner
 timeSensitivity: anytime
 videoUrl: "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
 source:
-  name: "Pohx RF Guide"
-  url: "https://pohx.net/faq"
+  - name: "Pohx RF Guide"
+    url: "https://pohx.net/faq"
 ---
 
 ## Understanding RF Degen
