--- a/src/content/tips/scarab-vendor-recipe.mdx
+++ b/src/content/tips/scarab-vendor-recipe.mdx
@@ -8,7 +8,6 @@ patchVersion: "3.25"
 publishedAt: 2024-12-01
 difficulty: beginner
 timeSensitivity: anytime
-estimatedValue: "Saves ~5-20c per batch"
 ---
 
 ## How It Works
@@ -24,16 +23,14 @@ Any NPC vendor in Path of Exile will accept 3 scarabs of the same tier and give 
 
 ## Tips
 
-- **Don't vendor valuable scarabs!** Check prices on [poe.ninja](https://poe.ninja) first
-- This is especially useful for:
-  - Converting league mechanic scarabs you don't run
-  - Getting rid of low-demand scarabs like Bestiary or Torment
-- Winged scarab conversion can be particularly profitable since the variance is high
+- **Use regex to find cheap scarabs:** Go to [poe.re/scarab](https://poe.re/#/scarab) and use the **"Auto select cheap scarabs"** button. This generates a regex to highlight only low-value scarabs in your stash, making it easy to see which ones to vendor.
+
 
 ## When to Use This
 
-- Early league when you're accumulating many low-value scarabs
-- When certain league mechanics are unpopular and their scarabs are worthless
+- Early league when you're accumulating many low-demand scarabs
+- When certain league mechanics are unpopular
+
 - To consolidate inventory space
 
 > **Pro tip:** Set up a dump tab filter to highlight low-value scarabs so you remember to vendor them in batches of 3.
