--- a/src/content/tips/atlas-essence-farming.mdx
+++ b/src/content/tips/atlas-essence-farming.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Atlas Passive Tree: Essences for Profit"
+title: "Atlas Passive Tree: Essences Farming"
 description: "How to set up your Atlas tree for consistent essence farming - one of the most reliable league start strategies."
 game: poe1
 category: atlas
@@ -8,16 +8,15 @@ patchVersion: "3.25"
 publishedAt: 2024-12-08
 difficulty: intermediate
 timeSensitivity: league-start
-estimatedValue: "5-10 div/hour"
 ---
 
 ## Why Essence Farming?
 
-Essences are one of the most **consistent** money-making strategies because:
+Essences are one of the most **consistent** strategies because:
 
 1. **Steady demand** - Crafters always need essences
 2. **Low barrier** - No special gear or builds required
-3. **Brain-dead farming** - Just clear maps and click crystals
+3. **Simple farming** - Just clear maps and click crystals
 4. **Compounds well** - More atlas passives = exponentially more essences
 
 ## Required Atlas Passives
@@ -36,7 +35,7 @@ Essences are one of the most **consistent** money-making strategies because:
 ### Early League (Day 1-3)
 1. Focus on unlocking Voidstones and getting map sustain
 2. Pick up essence passives as you path through the tree
-3. Sell essences in bulk using [TFT](https://forbiddentrove.com/) or bulk trade
+3. Consolidate essences to sell in bulk
 
 ### Mid League
 1. Full essence cluster specced
@@ -54,15 +53,6 @@ Essences are one of the most **consistent** money-making strategies because:
 - Deafening Zeal (attack speed)
 - Deafening Contempt (flat phys weapons)
 
-## Pricing Tips
-
-```
-Pricing formula (approximate):
-Deafening Essence = 5-15c depending on type
-Shrieking = 2-5c
-Screaming and below = bulk sell or essence tab recipe
-```
-
 ## Map Choice
 
 Any maps work, but prefer:
@@ -70,4 +60,5 @@ Any maps work, but prefer:
 - **T16** for best essence tiers
 - **No boss-focused maps** - you're here for essence density
 
-> 💡 **Pro tip:** Use the [poe.ninja](https://poe.ninja/economy/essence) bulk essence section to price your essences competitively. Undercut by 5-10% for fast sales.
+> 💡 **Pro tip:** Use the [poe.ninja](https://poe.ninja/economy/essence) bulk essence section to check which essences are currently in highest demand for crafting.
+
