feat: Implement tip display with search, filter, and table of contents, and add initial PoE tips.

--- a/src/content/tips/scarab-vendor-recipe.mdx
+++ b/src/content/tips/scarab-vendor-recipe.mdx
@@ -4,7 +4,6 @@ description: "Trade 3 low-value scarabs at any vendor to get 1 random scarab of 
 game: poe1
 category: currency
 tags: ["vendor-recipe", "scarabs", "beginner-friendly", "currency"]
-patchVersion: "3.25"
 publishedAt: 2024-12-01
 difficulty: beginner
 timeSensitivity: anytime
@@ -16,21 +15,10 @@ Any NPC vendor in Path of Exile will accept 3 scarabs of the same tier and give 
 
 ## Step by Step
 
-1. Collect scarabs you don't use (e.g., Bestiary, Torment, etc.)
-2. Make sure they're all the same tier (Rusted, Polished, Gilded, or Winged)
-3. Sell exactly 3 to any vendor
-4. Receive 1 random scarab of that tier
+1. Bulk sell cheap scarabs to any vendor in sets of 3
+2. Receive 1 random scarab of that tier
+3. Repeat!
 
 ## Tips
 
 - **Use regex to find cheap scarabs:** Go to [poe.re/scarab](https://poe.re/#/scarab) and use the **"Auto select cheap scarabs"** button. This generates a regex to highlight only low-value scarabs in your stash, making it easy to see which ones to vendor.
-
-
-## When to Use This
-
-- Early league when you're accumulating many low-demand scarabs
-- When certain league mechanics are unpopular
-
-- To consolidate inventory space
-
-> **Pro tip:** Set up a dump tab filter to highlight low-value scarabs so you remember to vendor them in batches of 3.
